--- a/jmeter_master_deploy-desktop.yaml
+++ b/jmeter_master_deploy-desktop.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: jmeter-load-test
+  labels:
+    app: influxdb-jmeter
+data:
+  load_test: |
+    #!/bin/bash
+    #Script created to invoke jmeter test script with the slave POD IP addresses
+    #Script should be run like: ./load_test "path to the test script in jmx format"
+    /jmeter/apache-jmeter-*/bin/jmeter -n -t $1 -Dserver.rmi.ssl.disable=true -R `getent ahostsv4 jmeter-slaves-svc | cut -d' ' -f1 | sort -u | awk -v ORS=, '{print $1}' | sed 's/,$//'`
+---
 kind: ConfigMap
 metadata:
   name: profile-config
@@ -83,7 +96,7 @@ data:
 apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: jmeter-master
+  name: jmeter-master-desktop
   labels:
     jmeter_mode: master
 spec:
@@ -96,12 +109,12 @@ spec:
       labels:
         jmeter_mode: master
     spec:
+      nodeName: okd-node-6  
       containers:
       - name: jmmaster
         image: registry.cn-hangzhou.aliyuncs.com/iotbull/jemeter_master_desktop
         imagePullPolicy: Always
-        command: [ "/bin/bash", "-c", "--" ]
-        args: [ "while true; do sleep 30; done;" ]
+       
         volumeMounts:
           - name: loadtest
             mountPath: /load_test
@@ -153,4 +166,25 @@ spec:
             path: path/to/.bashrc
       - name: loadtest 
         configMap:
-         name: jmeter-load-test
+          name: jmeter-load-test
+
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: jmeter-master-desktop
+#  namespace: zhanghong
+spec:
+  selector:
+    jmeter_mode: master
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+    name: http
+  - protocol: TCP
+    port: 5900
+    targetPort: 5900
+    name: vnc    
+
